# Data-Engineering-Projects

./: README.md  test_file.md
ETL-Project-1/: .gitignore  Makefile  README.md
ETL-Project-2/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
ETL-Project-3/: .env.example  Makefile  README.md  requirements.txt
databricks-ecommerce-dlt-pipeline/: .databrickignore  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
databricks-ecommerce-dlt-pipeline/data/ecommerce_data/customer_updates/round_3/: data.json
databricks-ecommerce-dlt-pipeline/data/ecommerce_data/order_items/round_3/: data.json
databricks-ecommerce-dlt-pipeline/data/ecommerce_data/order_payments/round_3/: data.json
databricks-ecommerce-dlt-pipeline/data/ecommerce_data/order_reviews/round_3/: data.json
databricks-ecommerce-dlt-pipeline/data/ecommerce_data/product_updates/round_2/: data.json
databricks-ecommerce-dlt-pipeline/data/ecommerce_data/product_updates/round_3/: data.json
databricks-ecommerce-dlt-pipeline/data/processed/round_2/customer_updates/: data.json
databricks-ecommerce-dlt-pipeline/docs/: ARCHITECTURE.md  EXECUTION.md
databricks-ecommerce-dlt-pipeline/pipeline/: 01_bronze.py  02_silver.py  03_gold.py
databricks-ecommerce-dlt-pipeline/resources/: ecommerce_dlt.pipeline.yml
databricks-ecommerce-dlt-pipeline/tests/: conftest.py  test_bronze.py  test_gold.py  test_silver.py
databricks-ecommerce-dlt-pipeline/utils/: __init__.py  schema.py
databricks-f1-intelligence/: .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
databricks-f1-intelligence/docs/: ARCHITECTURE.md  DASHBOARD_AND_DEPLOYMENT.md  EXECUTION.md
databricks-f1-intelligence/etl/: 01_bronze_ingestion.ipynb  02_silver_transformation.ipynb  03_gold_aggregation.ipynb
databricks-f1-intelligence/resources/: f1_intelligence_job.job.yml
databricks-f1-intelligence/scripts/: fetch_and_upload.py
databricks-f1-intelligence/streamlit_app/: app.py  app.yaml  requirements.txt
databricks-f1-intelligence/streamlit_app/pages/: 01_championship.py  02_race_results.py  03_tyre_strategy.py  04_circuit_benchmarks.py
databricks-f1-intelligence/utils/: __init__.py  helpers.py  jolpica.py  openf1.py  schema.py  validators.py
snowflake-nyc-taxi-analytics/: .gitignore  Makefile  README.md  dbt_project.yml  exposures.yml  packages.yml  pyproject.toml
snowflake-nyc-taxi-analytics/dags/: nyc_taxi_pipeline.py
snowflake-nyc-taxi-analytics/docs/: ARCHITECTURE.md  EXECUTION.md
snowflake-nyc-taxi-analytics/macros/: classify_time_of_day.sql  generate_schema_name.sql  safe_divide.sql
snowflake-nyc-taxi-analytics/models/: sources.yml
snowflake-nyc-taxi-analytics/models/marts/core/: dim_dates.sql  dim_taxi_zones.sql  fct_trips.sql  fct_trips.yml  schema.yml
snowflake-nyc-taxi-analytics/models/marts/finance/: mart_hourly_demand.sql  mart_hourly_demand.yml  mart_revenue_by_zone.sql  mart_revenue_by_zone.yml
snowflake-nyc-taxi-analytics/models/staging/: stg_yellow_trips.sql  stg_yellow_trips.yml
snowflake-nyc-taxi-analytics/scripts/: download_data.py  load_to_snowflake.py
snowflake-nyc-taxi-analytics/seeds/: payment_types.csv  taxi_zones.csv  vendor_names.csv
snowflake-nyc-taxi-analytics/snapshots/: zone_attributes_snapshot.sql
snowflake-nyc-taxi-analytics/tests/: assert_fare_positive_when_not_void.sql  assert_no_future_pickups.sql  assert_trip_duration_reasonable.sql  assert_zone_coverage.sql
snowflake-nyc-taxi-analytics/tests_pytest/: conftest.py  test_marts.py  test_snapshots.py  test_staging.py
snowflake-nyc-taxi-analytics/utils/: snowflake_loader.py
(+104 files in other folders)
