[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-intelligence"
version = "0.1.0"
description = "F1 Intelligence: Databricks medallion architecture for Formula 1 analytics"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "databricks-sql-connector>=3.0",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "databricks-connect>=15.4,<15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
