[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyc-taxi-analytics"
version = "0.1.0"
description = "NYC Taxi Analytics: dbt + Snowflake ELT pipeline on TLC Yellow Taxi Trip Records"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.8,<1.9",
    "dbt-snowflake>=1.8,<1.9",
    "snowflake-connector-python>=3.6",
    "snowflake-snowpark-python>=1.14",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.pytest.ini_options]
testpaths = ["tests_pytest"]

[tool.ruff]
line-length = 100
